syntax = "proto3";

package users;

service UserService
{
    rpc getUser(userRequest) returns (User){}
    rpc getAllUsers(EMPTY) returns (userList){}
    rpc createUser(User) returns (status){}
}

message Empty {}

message User{
    int32 UUID = 1;
    string firstName = 2;
    string lastName = 3;
    string username = 4;
    string password = 5;
}

message userRequest
{
    int32 UUID = 1;
}

message userList
{
    repeated User users = 1;
}

message status 
{
    int32 code = 1;
    string message = 2;
}